# lab-simple-rest

./: Makefile  Pipfile  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg  status.py
.devcontainer/: devcontainer.json
thunder/: collection-rest-demo.json
